--- a/src/Component/DashboardImage/DashboardImg.css
+++ b/src/Component/DashboardImage/DashboardImg.css
@@ -1,8 +1,6 @@
 .Image {
-    height: 1016px;
-    width: 1275px;
-    /*height: 476px;*/
-    /*width: 717px;*/
+    height: calc(100vh - 64px);
+    width: calc(100vw - 63%);
 }
 
 @media only screen and (max-width: 600px) {
@@ -17,4 +15,12 @@
         display: flex;
         width: 100%;
     }
+}
+
+@media only screen and (min-width: 1920px) {
+    .Image {
+        height: 1016px;
+        width: 1275px;
+    }
+
 }
