--- a/src/Component/DashboardImage/DashboardImg.css
+++ b/src/Component/DashboardImage/DashboardImg.css
@@ -1,6 +1,8 @@
 .Image {
-    height: calc(100vh - 64px);
-    width: calc(100vw - 64%);
+    /*height: calc(100vh - 64px);*/
+    /*width: calc(100vw - 64%);*/
+    height: 1016px;
+    width: 1275px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -17,12 +19,12 @@
     }
 }
 
-@media only screen and (min-width: 1920px) {
-    .Image {
-        height: 1016px;
-        width: 1275px;
-        /*height: calc(100vh - 66px);*/
-        /*width: calc(100vw - 50%);*/
-    }
+/*@media only screen and (min-width: 1920px) {*/
+/*    .Image {*/
+/*        height: 1016px;*/
+/*        width: 1275px;*/
+/*        !*height: calc(100vh - 66px);*!*/
+/*        !*width: calc(100vw - 50%);*!*/
+/*    }*/
 
-}
+/*}*/
