--- a/src/Component/header/HeaderPage.css
+++ b/src/Component/header/HeaderPage.css
@@ -17,7 +17,7 @@
     display: flex;
     position: relative;
     justify-content: space-evenly;
-    margin-left: 76%;
+    margin-left: 81%;
     gap: 24px;
 }
 
@@ -82,28 +82,28 @@
     }
 }
 
-@media only screen and (min-width: 1920px) {
-    .header_Wrapper {
-        max-width: 100%;
-    }
+/*@media only screen and (min-width: 1920px) {*/
+/*    .header_Wrapper {*/
+/*        max-width: 100%;*/
+/*    }*/
 
-    .login_form {
-        padding: 20px 170px;
-        align-items: center;
-        justify-content: center;
-    }
+/*    .login_form {*/
+/*        !*padding: 20px 170px;*!*/
+/*        align-items: center;*/
+/*        justify-content: center;*/
+/*    }*/
 
-    .ImageWrapper {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
+/*    .ImageWrapper {*/
+/*        display: flex;*/
+/*        justify-content: flex-end;*/
+/*        align-items: center;*/
+/*    }*/
 
-    .ButtonWrap {
-        margin-left: 81%;
-        display: flex;
-        position: relative;
-        justify-content: space-evenly;
-        gap: 24px;
-    }
-}
+/*    .ButtonWrap {*/
+/*        margin-left: 81%;*/
+/*        display: flex;*/
+/*        position: relative;*/
+/*        justify-content: space-evenly;*/
+/*        gap: 24px;*/
+/*    }*/
+/*}*/
